--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.40.0",
+    "react-icons": "^4.7.1",
+    "react-moment": "^1.1.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
